# basketball_shoes_project

./: .gitignore  README.md  app.py  data_process.ipynb  example.ipynb  pyproject.toml  shoe_constants.py  shoe_recommender_engine.py  shoe_retrieval.py
