[project]
name = "basketball-shoes-project"
version = "0.1.0"
description = ""
authors = [
    {name = "yifeilin0226",email = "ylin20@ualberta.ca"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "llama-index-experimental (>=0.5.5,<0.6.0)",
    "llama-index-llms-ollama (>=0.6.1,<0.7.0)",
    "llama-index (>=0.12.40,<0.13.0)",
    "llama-index-embeddings-huggingface (>=0.5.4,<0.6.0)",
    "einops (>=0.8.1,<0.9.0)",
    "chainlit (>=2.5.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "llama-index-utils-workflow (>=0.3.4,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
